--- a/.env
+++ b/.env
@@ -8,12 +8,14 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mongodb
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=datn_ta
+DB_PORT=27017
+DB_DATABASE=thuctap
 DB_USERNAME=root
 DB_PASSWORD=
+DB_URI=mongodb+srv://admin:phuong123@cluster0.djqmx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
